--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-drawer": "^2.5.1",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.6.2"
   },
   "devDependencies": {
