--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "native-base": "^2.8.1",
+    "@expo/vector-icons": "^8.0.0",
+    "native-base": "^2.8.2",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-drawer": "^2.5.1",
